--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,574 +1,580 @@
-.navbar-default{
+.navbar-default {
   background-color: #fff;
-  border:0;
+  border: 0;
   font-family: Poppins;
 }
 
-.navbar-brand{
-  font-size:20px !important;
-  color:black !important;
+.navbar-brand {
+  font-size: 20px !important;
+  color: black !important;
   font-weight: bold;
 }
 
-h1,h2,h3,h4,h5,h6{
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-family: Poppins !important;
 }
-p{
-  font-family:Roboto !important;
+p {
+  font-family: Roboto !important;
 }
-body{
+body {
   overflow-x: hidden;
 }
 
-#showcase img{
-  width:90%;
-  margin-left:70px;
+#showcase img {
+  width: 90%;
+  margin-left: 70px;
 }
 
-#showcase h1{
-  font-size:50px;
+#showcase h1 {
+  font-size: 50px;
   line-height: 1.5em;
 }
 
-#showcase p{
-  line-height:2em;
+#showcase p {
+  line-height: 2em;
 }
-#showcase .showcase-right{
-  margin-top:90px;
-}
-
-#block{
-  margin-top:50px;
+#showcase .showcase-right {
+  margin-top: 90px;
 }
 
-#block .comfort{
-  height:500px;
-  background-image: url('/images/child.jpeg');
-  border-radius:50px;
-  background-position:center;
-  background-size:cover;
-  background-repeat:no-repeat;
-  background-attachment:fixed;
+#block {
+  margin-top: 50px;
 }
 
-#block h2{
-  color:white;
+#block .comfort {
+  height: 500px;
+  background-image: url("/images/child.jpeg");
+  border-radius: 50px;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+
+#block h2 {
+  color: white;
   position: relative;
-  line-height:1.9em;
-  text-align:center;
+  line-height: 1.9em;
+  text-align: center;
 }
 
-#block .time{
-  height:500px;
-  background-image: url('/images/child.jpeg');
-  border-radius:50px;
-  background-position:center;
-  background-size:cover;
-  background-repeat:no-repeat;
-  background-attachment:fixed;
+#block .time {
+  height: 500px;
+  background-image: url("/images/child.jpeg");
+  border-radius: 50px;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
-#block .experts{
-  height:500px;
-  background-image: url('/images/child.jpeg');
-  border-radius:50px;
-  background-position:center;
-  background-size:cover;
-  background-repeat:no-repeat;
-  background-attachment:fixed;
+#block .experts {
+  height: 500px;
+  background-image: url("/images/child.jpeg");
+  border-radius: 50px;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
-#p_white{
-  color:white;
+#p_white {
+  color: white;
   position: absolute;
-  top:25%;
+  top: 25%;
   text-align: center;
   line-height: 2em;
   font-weight: bold;
   font-size: 18px;
-  padding:10%;
+  padding: 10%;
 }
 
-#block .btn-info{
+#block .btn-info {
   position: absolute;
-  top:60%;
-  left:35%;
+  top: 60%;
+  left: 35%;
 }
 
-.center{
-  text-align:center;
-  padding:20px;
+.center {
+  text-align: center;
+  padding: 20px;
 }
 
-.para_height{
+.para_height {
   line-height: 1.9em;
   font-size: 20px;
-  color:gray;
+  color: gray;
 }
 
-.student_heading{
-  margin:10px;
+.student_heading {
+  margin: 10px;
 }
 
-.opinions{
-  margin-top:100px;
+.opinions {
+  margin-top: 100px;
 }
 
-.opinions .col-md-3{
+.opinions .col-md-3 {
   height: auto;
-  background-color:white !important;
+  background-color: white !important;
 }
 
-.op_p{
-  color:black;
+.op_p {
+  color: black;
   font-size: 36px;
 }
 
-.op1,.op2,.op3{
-  margin:20px;
-  padding:20px;
+.op1,
+.op2,
+.op3 {
+  margin: 20px;
+  padding: 20px;
 }
-.opinions img{
+.opinions img {
   position: relative !important;
-  top:-20% !important;
-  left:-15% !important;
-  z-index : 1;
-  transition: transform .4s;
+  top: -20% !important;
+  left: -15% !important;
+  z-index: 1;
+  transition: transform 0.4s;
 }
 
-.opinions img:hover{
+.opinions img:hover {
   transform: scale(1.2);
 }
 
-.opinions .col-md-3:hover{
-  background-color:#e2e2e2 !important;
-  cursor:pointer;
+.opinions .col-md-3:hover {
+  background-color: #e2e2e2 !important;
+  cursor: pointer;
 }
 
-#courses img{
-  transition: transform .4s;
-  width:100%;
+#courses img {
+  transition: transform 0.4s;
+  width: 100%;
   max-width: 100%;
   padding-top: 3%;
 }
 
-
-#courses img:hover{
+#courses img:hover {
   transform: scale(0.9);
 }
 
-.Python_Course, .Web_Development, .PHP_Course{
-   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+.Python_Course,
+.Web_Development,
+.PHP_Course {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-
-.p_heading{
+.p_heading {
   margin-top: 10%;
   font-size: 26px;
   font-family: Roboto;
 }
 
-.p_description{
+.p_description {
   margin-top: 2%;
   line-height: 1.9em;
   font-size: 15px;
 }
 
-#courses .btn{
-  padding:10px;
-  margin:5%;
+#courses .btn {
+  padding: 10px;
+  margin: 5%;
 }
 
-
-footer{
+footer {
   background-color: #dbd6d6;
 }
 
-.arrow{
-  max-width:8%;
+.arrow {
+  max-width: 8%;
   max-height: 10%;
   animation-delay: 4s;
   animation-iteration-count: infinite;
   animation-duration: 6s;
 }
 
-#showcase, #Opinions, #courses, #block{
-  padding:30px;
+#showcase,
+#Opinions,
+#courses,
+#block {
+  padding: 30px;
 }
 
-.footer{
-  position:relative;
-  width:100%;
-  height:180px;
-}
-
-.footer img{
+.footer {
   position: relative;
-  top:100px;
-  left:90%;
-  max-height:30%;
+  width: 100%;
+  height: 180px;
 }
 
-.details{
+.footer img {
   position: relative;
-  padding:10%;
-  width:100%;
+  top: 100px;
+  left: 90%;
+  max-height: 30%;
+}
+
+.details {
+  position: relative;
+  padding: 10%;
+  width: 100%;
   background-color: white;
   background: transparent;
 }
 
-.details img{
+.details img {
   position: absolute;
-  top:0%;
-  width:25%;
-  height:22%;
-  left:38%;
+  top: 0%;
+  width: 25%;
+  height: 22%;
+  left: 38%;
 }
 
-
-.user_background{
-  background:url('/images/user_background.jpg');
-  height:650px;
-  background-size:cover;
-  background-position:center;
+.user_background {
+  background: url("/images/user_background.jpg");
+  height: 650px;
+  background-size: cover;
+  background-position: center;
   background-attachment: fixed;
 }
 
 /* All Forms CSS Starts Here */
 
-form{
+form {
   padding: 30px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  border-radius:10px;
+  border-radius: 10px;
 }
-.box{
-  position : relative;
+.box {
+  position: relative;
 }
-.box input{
-  width:100%;
-  outline:none;
-  border:none;
-  border-bottom:1px solid #999;
-  transition:0.2s linear;    
+.box input {
+  width: 100%;
+  outline: none;
+  border: none;
+  border-bottom: 1px solid #999;
+  transition: 0.2s linear;
 }
-.box input:focus{
+.box input:focus {
   border-bottom: 2px solid dodgerblue;
 }
 .box input:hover ~ label,
 .box input:valid ~ label,
-.box input:focus ~ label{
-  top:-20px;
-  font-size:15px;
-  color:dodgerblue;
+.box input:focus ~ label {
+  top: -20px;
+  font-size: 15px;
+  color: dodgerblue;
 }
-.box label:hover{
-  top:-20px;
-  color:dodgerblue;
-  font-size:15px;
+.box label:hover {
+  top: -20px;
+  color: dodgerblue;
+  font-size: 15px;
 }
-.box label{
+.box label {
   position: absolute;
-  top:-8px;
-  color:#999;
-  font-size:18px;
+  top: -8px;
+  color: #999;
+  font-size: 18px;
   font-weight: lighter;
-  transition:0.3s;
+  transition: 0.3s;
 }
-.box p{
-  font-size:13px;
-  margin-top:1%;
+.box p {
+  font-size: 13px;
+  margin-top: 1%;
 }
-.heading{
-  padding:10px;
-  padding-left:0px;
-  font-size:25px;
+.heading {
+  padding: 10px;
+  padding-left: 0px;
+  font-size: 25px;
   margin-bottom: 10%;
   font-weight: 500;
 }
-.smallParagraph{
-  margin-left:3%;
+.smallParagraph {
+  margin-left: 3%;
   padding: 10px;
-  padding-left:0px;
-  font-size:13px;
-  
+  padding-left: 0px;
+  font-size: 13px;
 }
-#show{
-  position:absolute;
-  top:-8px;
-  left:-15px;
-  border-radius:80%;
-  width:35px;
-  transition:0.5s;    
+#show {
+  position: absolute;
+  top: 20px;
+  left: -10px;
+  border-radius: 80%;
+  width: 40px;
+  transition: 0.5s;
 }
-#show:hover{
+#show:hover {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
-.sideImg{
+.sideImg {
   display: flex !important;
   align-content: center !important;
   align-items: center !important;
   justify-content: center !important;
-  height:100%;
+  height: 100%;
 }
-.sideImg img{
-  width:100%;
+.sideImg img {
+  width: 100%;
 }
-.final .link{
+.final .link {
   text-decoration: none;
-  padding:15px;
+  padding: 15px;
   transition: 0.5s;
-  border-radius:10px;
+  border-radius: 10px;
 }
-.final .link:hover{
-  color:dodgerblue;
+.final .link:hover {
+  color: dodgerblue;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-.final{
-  margin-top:5%;
-  margin-bottom:10%;
-  position:relative;
+.final {
+  margin-top: 5%;
+  margin-bottom: 10%;
+  position: relative;
 }
-.final button{
+.final button {
   padding: 10px;
-  background: dodgerblue; 
-  color:white;
-  position:absolute;
-  border-radius:5px;
-  right:10px;
-  top:-10px;
+  background: dodgerblue;
+  color: white;
+  position: absolute;
+  border-radius: 5px;
+  right: 10px;
+  top: -10px;
   text-decoration: none;
-  width:200px;
+  width: 200px;
   text-align: center;
 }
-.final button:hover{
-  color:white;
+.final button:hover {
+  color: white;
 }
-.google p{
+.google p {
   text-align: center;
-  font-size:22px;
-  margin-top:3%;
+  font-size: 22px;
+  margin-top: 3%;
 }
-.google a{
-  padding:10px;
+.google a {
+  padding: 10px;
   background: dodgerblue;
-  border:none;
-  width:200px;
-  border:none;
+  border: none;
+  width: 200px;
+  border: none;
 }
-.google .pull-left{
-  background: #FF4004;
+.google .pull-left {
+  background: #ff4004;
 }
-.google button:hover{
+.google button:hover {
   background: dodgerblue;
 }
-.google .pull-left:hover{
-  background: #FF4004;
+.google .pull-left:hover {
+  background: #ff4004;
 }
 
 /* All Forms CSS Ends Here */
 
 /* Home Route */
-.search{
+.search {
   display: flex;
   justify-content: center;
   align-content: center;
-  background: url('/images/search.jpg');
-  background-size:cover;
+  background: url("/images/search.jpg");
+  background-size: cover;
   background-repeat: none;
   background-attachment: fixed;
 }
-.search_container{
-  height:300px;
+.search_container {
+  height: 300px;
 }
-.search_container input{
-  width:100%;
+.search_container input {
+  width: 100%;
   box-shadow: none;
-  padding:5px;
-  font-size:20px;
-  border-radius:5px;
-  outline:none !important;
+  padding: 5px;
+  font-size: 20px;
+  border-radius: 5px;
+  outline: none !important;
 }
-.border{
-  padding:15px;
-  margin-top:5%;
-  height:100%;
-  margin-bottom:2%;
+.border {
+  padding: 15px;
+  margin-top: 5%;
+  height: 100%;
+  margin-bottom: 2%;
 }
-.imgbox img{
-  width:100%;
-  height:200px;
+.imgbox img {
+  width: 100%;
+  height: 200px;
 }
-.course_details p{
-  font-size:15px;
-  margin-top:3%;
-} 
-.ImageBox{
-  transition:0.2s;
-  height:380px;
-  padding:20px;
-  width:100%;
+.course_details p {
+  font-size: 15px;
+  margin-top: 3%;
 }
-.ImageBox:hover{
+.ImageBox {
+  transition: 0.2s;
+  height: 380px;
+  padding: 20px;
+  width: 100%;
+}
+.ImageBox:hover {
   box-shadow: 0 4px 8px 0 #8b858533, 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
-.searchButton{
-  outline:none !important;
-  border:none !important;
+.searchButton {
+  outline: none !important;
+  border: none !important;
 }
-.pagination{
+.pagination {
   display: flex !important;
   justify-content: center !important;
   align-content: center !important;
 }
 .autocomplete {
-position: relative;
-display: inline-block;
+  position: relative;
+  display: inline-block;
 }
 .autocomplete-items {
-position: absolute;
-border: 1px solid #d4d4d4;
-border-bottom: none;
-border-top: none;
-z-index: 99;
-top: 100%;
-left: 0;
-right: 0;
+  position: absolute;
+  border: 1px solid #d4d4d4;
+  border-bottom: none;
+  border-top: none;
+  z-index: 99;
+  top: 100%;
+  left: 0;
+  right: 0;
 }
 .autocomplete-items div {
-padding: 10px;
-cursor: pointer;
-background-color: #fff; 
-border-bottom: 1px solid #d4d4d4; 
+  padding: 10px;
+  cursor: pointer;
+  background-color: #fff;
+  border-bottom: 1px solid #d4d4d4;
 }
 .autocomplete-items div:hover {
-background-color: #e9e9e9; 
+  background-color: #e9e9e9;
 }
 .autocomplete-active {
-background-color: DodgerBlue !important; 
-color: #ffffff; 
+  background-color: DodgerBlue !important;
+  color: #ffffff;
 }
-.searchButton{
-background: dodgerblue !important;
+.searchButton {
+  background: dodgerblue !important;
 }
-
 
 /* Courses */
-.logo{
-  width:300px;
+.logo {
+  width: 300px;
   border-radius: 30px;
   box-shadow: 0 10px 80px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  height:220px;
+  height: 220px;
 }
-.head{
-  height:220px;
+.head {
+  height: 220px;
   text-align: center;
   padding: 20px;
 }
-.head p{
+.head p {
   font-size: 1.3em;
 }
-.details .col-lg-4{
-  border : 1px solid black;
+.details .col-lg-4 {
+  border: 1px solid black;
 }
-.courses{
+.courses {
   margin-top: 5%;
 }
-.courses h3{
-  padding:15px;
+.courses h3 {
+  padding: 15px;
 }
-.panel-title a{
+.panel-title a {
   text-decoration: none;
   font-size: 1.1em;
 }
-.panel-title{
-  padding : 10px;
+.panel-title {
+  padding: 10px;
 }
-.course_contact{
+.course_contact {
   text-align: center;
   font-weight: bold;
-  width:99%;
+  width: 99%;
   margin-left: 1%;
-  background:url('/images/course_contact.jpg');
+  background: url("/images/course_contact.jpg");
   background-attachment: fixed;
   border-radius: 30px;
   background-size: cover;
   background-position: center;
-  height:300px;
-  color:white;
+  height: 300px;
+  color: white;
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.panel-body{
-  padding:15px;
+.panel-body {
+  padding: 15px;
   line-height: 30px;
 }
-#contact{
+#contact {
   font-size: 40px;
-  color:white;
+  color: white;
 }
-.contact_details{
+.contact_details {
   font-size: 25px;
 }
-.panel-body_p{
-  font-size:1.3em;
+.panel-body_p {
+  font-size: 1.3em;
 }
-#address span{
+#address span {
   font-size: 1.1em;
 }
-.center{
+.center {
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.address{
+.address {
   line-height: 30px;
-  height:300px;
+  height: 300px;
   font-size: 1.2em;
 }
 
 .share img {
-width: 45px;
-padding: 5px;
-border: 0;
-box-shadow: 0;
-display: inline;
-transition:1.5s
+  width: 45px;
+  padding: 5px;
+  border: 0;
+  box-shadow: 0;
+  display: inline;
+  transition: 1.5s;
 }
-.share img:hover{
+.share img:hover {
   transform: rotate(360deg);
-  width:55px;
+  width: 55px;
 }
-.share a:hover{
+.share a:hover {
   text-decoration: none;
 }
 
-#comment{
-  width:90%;
-  height:30px;
-  border:none;
-  border-bottom:2px solid #999;
+#comment {
+  width: 90%;
+  height: 30px;
+  border: none;
+  border-bottom: 2px solid #999;
 }
-.comment{
-  margin-top:3%;
+.comment {
+  margin-top: 3%;
 }
 .comment button,
-.comment input{
-  margin:10px;
+.comment input {
+  margin: 10px;
 }
-#comment:focus{
-  outline:none;
+#comment:focus {
+  outline: none;
 }
-#panel{
-   width:100%;
-   float: right;
-   height:500px;
-   overflow:auto;
-   overflow-x:hidden;
+#panel {
+  width: 100%;
+  float: right;
+  height: 500px;
+  overflow: auto;
+  overflow-x: hidden;
 }
-#map{
-  width:100%;
+#map {
+  width: 100%;
   height: 500px;
   float: left;
 }
@@ -576,58 +582,58 @@ transition:1.5s
 
 /* Profile */
 
-.profile{
-  height:100%;
+.profile {
+  height: 100%;
   padding: 10px;
-  border-radius:10px;
-  box-shadow: 0 5px 10px rgba(0,0,0,0.2);
+  border-radius: 10px;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
 }
-.profile form{
+.profile form {
   box-shadow: none;
 }
-.center{
+.center {
   text-align: center;
 }
 
-.profile input{
+.profile input {
   padding: 10px 0;
-  margin-bottom:30px;
-  width:100%;
+  margin-bottom: 30px;
+  width: 100%;
   box-sizing: border-box;
   box-shadow: none;
-  border:none;
+  border: none;
   border-bottom: 1px solid #999;
-  outline:none;
+  outline: none;
 }
-.box1 div{
+.box1 div {
   position: relative;
-  margin-left:30px;
+  margin-left: 30px;
 }
-.box1 div label{
+.box1 div label {
   position: absolute;
-  top:10px;
-  left:0;
+  top: 10px;
+  left: 0;
   transition: 0.3s;
-  color:#999;
+  color: #999;
   pointer-events: none;
 }
 .profile input:focus ~ label,
 .profile input:hover ~ label,
-.profile input:valid ~ label{
-  top:-12px;
-  left:0;
+.profile input:valid ~ label {
+  top: -12px;
+  left: 0;
   font-size: 12px;
-  color:dodgerblue;
+  color: dodgerblue;
 }
-.profileImage{
+.profileImage {
   padding: 5px;
-  height:200px;
-  border:1px solid #999;
-  margin-left:15px;
-  margin-right:15px;
-  box-shadow: 0 5px 10px rgba(0,0,0,0.2);   
+  height: 200px;
+  border: 1px solid #999;
+  margin-left: 15px;
+  margin-right: 15px;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
 }
-.profileImage img{
-  height:100%;
-  width:100%;
+.profileImage img {
+  height: 100%;
+  width: 100%;
 }
