--- a/views/user/course.hbs
+++ b/views/user/course.hbs
@@ -35,6 +35,8 @@
   <li><a data-toggle="tab" href="#menu2"><i class="fa fa-comments" aria-hidden="true"></i>Reviews</a></li>
   <li><a data-toggle="tab" href="#menu3"><i><i class="fa fa-map-marker" aria-hidden="true"></i>
       </i>View Map</a></li>
+  <li><a data-toggle="tab" href="#menu4"><i><i class="fa fa-user-circle-o" aria-hidden="true"></i>
+      </i>Take an Appointments</a></li>
 </ul>
 
 <div class="tab-content container">
@@ -135,6 +137,25 @@
           </div>
         </div>
       </section>
+    </div>
+    <div id="menu4" class="tab-pane fade">
+      <h1>Take An Appointment</h1>
+      <form action="/appointment/{{id}}" method="POST">
+        <div class="form-group">
+          <label for="fullname">Full Name</label>
+          <input type="text" class="form-control" id="fullname" name='fullname' aria-describedby="name" placeholder="Enter Full Name">
+          <small id="name" class="form-text text-muted">We'll never share persnal details with anyone else.</small>
+        </div>
+        <div class="form-group">
+          <label for="phone">Contact Number</label>
+          <input type="text" class="form-control" name='number' id="phone" placeholder="Enter Number">
+        </div>
+        <div class="form-group">
+          <label for="date">Enter Date</label>
+          <input type="datetime-local" class="form-control" name='date' id="date" placeholder="Enter Date">
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
     </div>
   </div>
 </div>
